sumo/tests/duarouter/errors/network/edge/lane/root__edge__lane#length__false12/errors.duarouter
Error: Not numerical length definition in lane '1_1'.
Quitting (on error).
